[project]
name = "what-happens-analytics-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
packages = [
    { include = "*", from = "src" },
]
dependencies = [
    "agents>=1.4.0",
    "asyncio>=4.0.0",
    "openai>=1.99.9",
    "plotly>=6.3.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
]
